Changes to Stanford nlp